# cuda-sgemm-optimization

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cuda-cmake-ci.yml
cmake/: sgemm_dispatchConfig.cmake.in  stage710_package_ci_test.cmake
docs/: stage710_ctest_github_actions_results.md  stage71_baseline_results.md  stage72_shared_tiling_results.md  stage73_register1d_results.md  stage74_register2d_results.md  stage75_vectorized_results.md  stage76_double_buffer_results.md  stage77_benchmark_results.md  stage77_dispatch_results.md  stage78_static_library_results.md  stage79_cmake_package_results.md  stage7_plan.md
include/: cuda_check.h  sgemm_dispatch.h
results/: device_info.txt  environment.txt  stage710_ci_ninja_build.txt  stage710_ci_ninja_configure.txt  stage710_ci_ninja_ctest.txt  stage710_ci_ninja_test_list.txt  stage710_ctest_ci.txt  stage710_ctest_ci_verbose.txt  stage710_ctest_gpu.txt  stage710_ctest_gpu_verbose.txt  stage710_test_list.txt  stage710_validation_summary.txt  stage71_baseline_1024.csv  stage71_baseline_1024.txt  stage71_baseline_4096.csv  stage71_baseline_4096.txt  stage71_baseline_512.csv  stage71_baseline_512.txt  stage72_tiled_1024.csv  stage72_tiled_1024.txt  stage72_tiled_4096.csv  stage72_tiled_4096.txt  stage72_tiled_512.csv  stage72_tiled_512.txt  stage72_tiled_unaligned.csv  stage72_tiled_unaligned.txt  stage73_register1d_1024.csv  stage73_register1d_1024.txt  stage73_register1d_4096.csv  stage73_register1d_4096.txt  stage73_register1d_512.csv  stage73_register1d_512.txt  stage73_register1d_unaligned.csv  stage73_register1d_unaligned.txt  stage74_register2d_1024.csv  stage74_register2d_1024.txt  stage74_register2d_4096.csv  stage74_register2d_4096.txt  stage74_register2d_512.csv  stage74_register2d_512.txt  (+58 more)
scripts/: build.sh  stage77_benchmark.py
src/: device_info.cu  sgemm_dispatch.cu  sgemm_stage71.cu  sgemm_stage72_tiled.cu  sgemm_stage73_register1d.cu  sgemm_stage74_register2d.cu  sgemm_stage75_vectorized.cu  sgemm_stage76_double_buffer.cu  sgemm_stage77_dispatch.cu
tests/: sgemm_stage78_library_smoke.cu
tests/stage79_cmake_consumer/: CMakeLists.txt  main.cu
